--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.4.0",
+    "@contentful/rich-text-types": "^15.3.6",
     "babel-plugin-styled-components": "^1.13.2",
+    "bootstrap": "^5.1.1",
+    "dotenv": "^10.0.0",
     "gatsby": "^3.13.1",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^1.14.0",
     "gatsby-plugin-sharp": "^3.14.0",
     "gatsby-plugin-styled-components": "^4.14.0",
@@ -24,7 +29,10 @@
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-sharp": "^3.14.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "slugify": "^1.6.0",
     "styled-components": "^5.3.1"
   }
 }
